formater html and css

--- a/index.html
+++ b/index.html
@@ -102,50 +102,14 @@
             
 
 
-            <div class="input-block">
-                <div class="input-texts-top">
-                    <div class="bold-black-text">Filter Date Dropdown</div>
-                </div>
-                <div class="input-inner">                    
-                    <select>
-                        <option value="24231">19 авг - 23 авг</option>
-                        <option value="123">23 авг - 26 авг</option>
-                    </select>
-                </div>
+        <div class="input-block">
+            <div class="input-texts-top">
+                <div class="bold-black-text">Filter Date Dropdown</div>
             </div>
-
-
-
-
-
-            <div class="input-block">
-                <div class="input-texts-top">
-                    <div class="bold-black-text">subscription text field</div>               
-                </div>
-                <div class="input-inner">
-                    <div class="right">
-                        <input type ="text" placeholder="Email">
-                        <div class="input-arrow">
-                            →
-                        </div>
-                    </div>
-                 </div>
-            </div>     
-
-
-
-             <!--input-calculate-->
-
-
-            <div class="input-block input-calculate"> 
-                <div class="input-texts-top">
-                    <div class="bold-black-text">Dropdown</div>
-                    <div class="grey-text">Default</div>
-                </div>
-                <div class="input-inner">
+            <div class="input-inner">                    
                 <select>
-                    <option value="24231">2 спальни, 2 кровати</option>
-                    <option value="123">1 спальня, 1 кровать</option>
+                    <option value="24231">19 авг - 23 авг</option>
+                    <option value="123">23 авг - 26 авг</option>
                 </select>
             </div>
         </div>
@@ -153,73 +117,104 @@
 
 
 
-        <div class="input-block">
-            <div class="input-texts-top">
-            
-            </div>
-            <div class="spalni">
-               <div class="spalni-element">
-                    <div class="spalni-left">Спальни</div>
-                    <div class="spalni-right">
-                        <div class="spalni-minus">-</div>
-                        <input type="number" value="2" name="">
-                        <div class="spalni-plus">+</div>
-                    </div>    
-               </div>     
-            </div>
-        </div>
-
-
-
 
         <div class="input-block">
             <div class="input-texts-top">
-
+                <div class="bold-black-text">subscription text field</div>               
             </div>
-            <div class="spalni">
-               <div class="spalni-element">
-                    <div class="spalni-left">Кровати</div>
-                    <div class="spalni-right">
-                        <div class="spalni-minus">-</div>
-                        <input type="number" value="2" name="">
-                        <div class="spalni-plus">+</div>
-                    </div>    
-               </div>     
-            </div>
-        </div>
-
-
-
-
-
-        <div class="input-block">
-            <div class="spalni">
-               <div class="spalni-element">
-                    <div class="spalni-left">Ванная комната</div>
-                    <div class="spalni-right">
-                        <div class="spalni-minus">-</div>
-                        <input type="number" value="2" name="">
-                        <div class="spalni-plus">+</div>
-                    </div>    
-               </div>     
-            </div>
-        </div>
-
-            <div class="variation">
-                <div class="bold-black-text">expandable checkbox list</div>
-                    <div class="checkbox-and-text">
-                        <input type="checkbox" >
-                        <div class="name">
-                            Завтрак
-                        </div>
-                    </div>  
-                    <div class="checkbox-and-text">
-                        <input type="checkbox" >
-                        <div class="name">
-                            Письменный стол
-                        </div>
+            <div class="input-inner">
+                <div class="right">
+                    <input type ="text" placeholder="Email">
+                    <div class="input-arrow">
+                        →
                     </div>
+                </div>
+             </div>
+        </div>     
+
+
+
+         <!--input-calculate-->
+        <div class="menu">
+            <div class="input-block input-calculate"> 
+                <div class="input-texts-top">
+                    <div class="bold-black-text">Dropdown</div>
+                    <div class="grey-text">Default</div>
+                </div>
+                <div class="input-inner">
+                    <select>
+                        <option value="24231">2 спальни, 2 кровати</option>
+                        <option value="123">1 спальня, 1 кровать</option>
+                    </select>
+                </div>
             </div>
+
+
+
+            <div class="groups">   
+                <div class="input-block input-block-new">
+                    <div class="spalni">
+                       <div class="spalni-element">
+                            <div class="spalni-left">Спальни</div>
+                            <div class="spalni-right">
+                                <div class="spalni-minus">-</div>
+                                <input type="number" value="2" name="">
+                                <div class="spalni-plus">+</div>
+                            </div>    
+                       </div>     
+                    </div>
+                </div>
+
+
+
+
+                <div class="input-block input-block-new">
+                    <div class="spalni">
+                       <div class="spalni-element">
+                            <div class="spalni-left">Кровати</div>
+                            <div class="spalni-right">
+                                <div class="spalni-minus">-</div>
+                                <input type="number" value="2" name="">
+                                <div class="spalni-plus">+</div>
+                            </div>    
+                       </div>     
+                    </div>
+                </div>
+
+
+
+
+
+                <div class="input-block input-block-new">
+                    <div class="spalni">
+                       <div class="spalni-element">
+                            <div class="spalni-left">Ванная комната</div>
+                            <div class="spalni-right">
+                                <div class="spalni-minus">-</div>
+                                <input type="number" value="2" name="">
+                                <div class="spalni-plus">+</div>
+                            </div>    
+                       </div>     
+                    </div>
+                </div>
+            </div>    
+        </div>    
+
+        <div class="variation">
+            <div class="bold-black-text">expandable checkbox list</div>
+                <div class="checkbox-and-text">
+                    <input type="checkbox" >
+                    <div class="name">
+                        Завтрак
+                    </div>
+                </div>  
+                <div class="checkbox-and-text">
+                    <input type="checkbox" >
+                    <div class="name">
+                        Письменный стол
+                    </div>
+                </div>
+        </div>
 
 
     </div>
