--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="input-inner">
                 <select>
-                    <option value="24231">Москва</option>
+                    <option value="24231">Сколько гостей</option>
                     <option value="123">123</option>
                 </select>
             </div>
@@ -73,12 +73,12 @@
 
             <div class="input-block">
                 <div class="input-texts-top">
-                    <div class="bold-black-text">Dropdown</div>
+                    <div class="bold-black-text">Date Dropdown</div>
                 </div>
                 <div class="input-inner">
                     <select>
-                        <option value="24231">Москва</option>
-                        <option value="123">123</option>
+                        <option value="24231">ДД.ММ.ГГГГ</option>
+                        <option value="123">19.08.2019</option>
                     </select>
                 </div>
             </div>
@@ -86,11 +86,11 @@
 
             <div class="input-block">
                 <div class="input-texts-top">
-                    <div class="bold-black-text">Dropdown</div>
+                    <div class="bold-black-text">Date Dropdown</div>
                 </div>
                 <div class="input-inner">
                     <select>
-                        <option value="24231">Москва</option>
+                        <option value="24231">19.08.2019</option>
                         <option value="123">123</option>
                     </select>
                 </div>
@@ -133,13 +133,25 @@
         </div>     
 
 
+        <div class="input-block">
+            <div class="input-texts-top">
+                <div class="bold-black-text">Dropdown</div>
+                 <div class="grey-text">Default</div>
+            </div>
+            <div class="input-inner">                    
+                <select>
+                    <option value="24231">2 спальни, 2 кровати</option>
+                    <option value="123">23 авг - 26 авг</option>
+                </select>
+            </div>
+        </div>
 
          <!--input-calculate-->
         <div class="menu">
             <div class="input-block input-calculate"> 
                 <div class="input-texts-top">
                     <div class="bold-black-text">Dropdown</div>
-                    <div class="grey-text">Default</div>
+                    <div class="grey-text">Expanded</div>
                 </div>
                 <div class="input-inner">
                     <select>
@@ -200,21 +212,52 @@
             </div>    
         </div>    
 
+
         <div class="variation">
-            <div class="bold-black-text">expandable checkbox list</div>
+            <div class="bold-black-text">expandable checkbox list<select></select></div>
+        </div>    
+
+        <div class="variation">
+            <div class="bold-black-text">expandable checkbox list<select></select></div>
                 <div class="checkbox-and-text">
+                  
                     <input type="checkbox" >
                     <div class="name">
                         Завтрак
                     </div>
                 </div>  
                 <div class="checkbox-and-text">
-                    <input type="checkbox" >
+                    <input type="checkbox" id="checked" checked="yes">
                     <div class="name">
                         Письменный стол
                     </div>
                 </div>
-        </div>
+                <div class="checkbox-and-text">
+                    <input type="checkbox" id="checked" checked="yes">
+                    <div class="name">
+                        Стул для кормления
+                    </div>
+                </div>
+                <div class="checkbox-and-text">
+                    <input type="checkbox" id="checked" checked="yes">
+                    <div class="name">
+                        Кроватка
+                    </div>
+                </div>
+                <div class="checkbox-and-text">
+                    <input type="checkbox" >
+                    <div class="name">
+                        Телевизор
+                    </div>
+                </div>
+                <div class="checkbox-and-text">
+                    <input type="checkbox" >
+                    <div class="name">
+                        Шампунь
+                    </div>
+                </div>
+        </div> 
+
 
 
     </div>
